# finalfpse

./: .gitignore  README.md  bisect204956915.coverage  bisect451472438.coverage  bisect611507698.coverage  bisect720674023.coverage  bisect739506192.coverage  bisect903194989.coverage  bisect955721570.coverage  bsconfig.json  chess_ai.opam  dune  dune-project  package-lock.json  package.json
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/47e007fefa63695257b4d9874e3138b7/: dune__exe___ppx.cmo
_build/default/.ppx/57ef275c515ec1fe105f6ff0979f5a61/: dune__exe___ppx.cmx
_build/default/src/: lib.cma  lib.cmxa  lib.cmxs  lib.pp.ml  lib.pp.mli
_build/default/src/.lib.objs/byte/: lib.cmi  lib.cmo  lib.cmt  lib.cmti
_build/default/src/.lib.objs/native/: lib.cmx
_build/default/src/.merlin-conf/: lib-lib
_build/default/tests/: tests.pp.ml
_build/default/tests/.merlin-conf/: exe-tests
_build/default/tests/.tests.eobjs/byte/: dune__exe__Tests.cmti
_build/default/tests/.tests.eobjs/native/: dune__exe__Tests.cmx
_coverage/: index.html
_coverage/src/: board.ml.html  chess_ai.ml.html  lib.ml.html
app/: App.bs.js  App.res  ChessBoard.bs.js  ChessBoard.res  Index.bs.js  Index.res  Test.bs.js  script.js  style.css
client/: bsconfig.json  index.html  package-lock.json  package.json
client/src/: App.bs.mjs  App.res  Board.res
client/src/components/: Dropdown.bs.mjs  Dropdown.res  Dropdown.resi  Form.bs.mjs  Form.res  Textbox.bs.mjs  Textbox.res  Textbox.resi
client/src/utils/: Utils.res
server/: dune  server.ml  server_lib.ml  server_lib.mli  template.eml.ml
src/: board.ml  board.mli  chess_ai.ml  chess_ai.mli  dune  lib.ml  lib.mli  server.ml  server_lib.ml  server_lib.mli  template.eml.ml
tests/: dune  tests.ml
