(rule
 (target chess_ai.zip)
 (deps
  src/lib.ml
  src/lib.mli
  src/chess_ai.ml
  src/chess_ai.mli
  src/board.mli
  src/board.ml
  src/dune
  server/server_lib.ml
  server/server_lib.mli
  server/server.ml
  server/template.eml.ml
  server/dune
  tests/tests.ml
  tests/dune)
 (action
  (run zip -R chess_ai.zip %{deps})))
