(library
 (name lib)
 (modules lib)
 (libraries core)
 (preprocess
  (pps ppx_jane bisect_ppx)))

(library
 (name board)
 (modules board)
 (libraries core lib)
 (preprocess
  (pps ppx_jane bisect_ppx)))

(library
 (name chess_ai)
 (modules chess_ai)
 (libraries core lib board)
 (preprocess
  (pps ppx_jane bisect_ppx)))

(library
 (name server_lib)
 (modules server_lib)
 (libraries core chess_ai dream))

(executable
 (name server)
 (public_name server)
 (modules server template)
 (libraries core dream lwt)
 (preprocess
  (pps lwt_ppx)))

(rule
 (targets template.ml)
 (deps template.eml.ml)
 (action
  (run dream_eml %{deps} --workspace %{workspace_root})))
